@@ -1,3 +1,8 @@
+1998-07-30  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-libgtop-check.m4 (GNOME_LIBGTOP_TYPES): New macro.
+	Checks for `u_int64_t' and `int64_t'.
+
 1998-07-29  Martin Baulig  <martin@home-of-linux.org>
 
 	* gnome-libgtop-check.m4: Added (AC_SUBST):
